# bookstore

./: pyproject.toml
bookstore/: settings.py  urls.py
order/: factories.py  models.py  serializers.py  tests.py  urls.py  views.py
order/migrations/: 0001_initial.py
product/: factories.py  models.py  serializers.py  tests.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_remove_category_price.py
